--- a/devel/p5-MooX-File-ConfigDir/Makefile
+++ b/devel/p5-MooX-File-ConfigDir/Makefile
@@ -1,8 +1,7 @@
-# $NetBSD: Makefile,v 1.8 2017/06/05 14:23:17 ryoon Exp $
+# $NetBSD: Makefile,v 1.9 2017/06/18 03:24:59 mef Exp $
 
-DISTNAME=	MooX-File-ConfigDir-0.005
+DISTNAME=	MooX-File-ConfigDir-0.006
 PKGNAME=	p5-${DISTNAME}
-PKGREVISION=	3
 CATEGORIES=	devel perl5
 MASTER_SITES=	${MASTER_SITE_PERL_CPAN:=../../authors/id/R/RE/REHSACK/}
 
