--- a/devel/p5-local-lib/Makefile
+++ b/devel/p5-local-lib/Makefile
@@ -1,9 +1,8 @@
-# $NetBSD: Makefile,v 1.29 2017/06/05 14:23:54 ryoon Exp $
+# $NetBSD: Makefile,v 1.30 2017/06/18 03:41:19 mef Exp $
 #
 
-DISTNAME=	local-lib-2.000019
+DISTNAME=	local-lib-2.000023
 PKGNAME=	p5-${DISTNAME}
-PKGREVISION=	1
 CATEGORIES=	devel perl5
 MASTER_SITES=	${MASTER_SITE_PERL_CPAN:=../../authors/id/H/HA/HAARG/}
 
