--- a/www/ruby-padrino/Makefile.common
+++ b/www/ruby-padrino/Makefile.common
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile.common,v 1.14 2017/06/06 11:12:05 jperkin Exp $
+# $NetBSD: Makefile.common,v 1.15 2017/06/18 13:48:54 taca Exp $
 #
 # used by www/ruby-padrino/Makefile
 # used by www/ruby-padrino-admin/Makefile
@@ -12,4 +12,4 @@
 RUBY_PADRINO_VERS=	0.14.1.1
 RUBY_PADRINO_SITE=	http://www.padrinorb.com/
 
-RUBY_VERSIONS_ACCEPTED=	22 23	# www/ruby-rack
+RUBY_VERSIONS_ACCEPTED=	22 23 24	# www/ruby-rack
