--- a/www/ruby-rack-contrib/Makefile
+++ b/www/ruby-rack-contrib/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.4 2017/06/06 11:12:05 jperkin Exp $
+# $NetBSD: Makefile,v 1.5 2017/06/18 13:48:54 taca Exp $
 
 DISTNAME=	rack-contrib-1.4.0
 CATEGORIES=	www
@@ -10,7 +10,7 @@ LICENSE=	mit
 
 DEPENDS+=	${RUBY_PKGPREFIX}-rack>=0:../../www/ruby-rack
 
-RUBY_VERSIONS_ACCEPTED=	22 23	# www/ruby-rack
+RUBY_VERSIONS_ACCEPTED=	22 23 24	# www/ruby-rack
 
 .include "../../lang/ruby/gem.mk"
 .include "../../mk/bsd.pkg.mk"
