--- a/sysutils/ruby-chef-zero/Makefile
+++ b/sysutils/ruby-chef-zero/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.6 2017/06/12 14:32:19 taca Exp $
+# $NetBSD: Makefile,v 1.7 2017/06/18 16:24:52 taca Exp $
 
 DISTNAME=	chef-zero-13.0.0
 CATEGORIES=	sysutils
@@ -14,7 +14,7 @@ DEPENDS+=	${RUBY_PKGPREFIX}-uuidtools>=2.1<3:../../devel/ruby-uuidtools
 DEPENDS+=	${RUBY_PKGPREFIX}-hashie>=2.0.5<4.0:../../misc/ruby-hashie
 DEPENDS+=	${RUBY_PKGPREFIX}-rack>=2.0<3:../../www/ruby-rack
 
-RUBY_VERSIONS_ACCEPTED=	23	# www/ruby-rack
+RUBY_VERSIONS_ACCEPTED=	23 24	# www/ruby-rack
 RUBYGEM_OPTIONS+=	--format-executable
 
 pre-configure:
