--- a/www/wordpress/Makefile
+++ b/www/wordpress/Makefile
@@ -1,8 +1,7 @@
-# $NetBSD: Makefile,v 1.68 2017/05/30 07:20:15 jklos Exp $
+# $NetBSD: Makefile,v 1.69 2017/06/18 18:01:42 morr Exp $
 
 DISTNAME=		wordpress-${VERSION}
-VERSION=		4.7.5
-PKGREVISION=		0
+VERSION=		4.8
 CATEGORIES=		www
 MASTER_SITES=		http://wordpress.org/
 
