--- a/x11/libxfce4ui/Makefile
+++ b/x11/libxfce4ui/Makefile
@@ -1,9 +1,8 @@
-# $NetBSD: Makefile,v 1.8 2017/02/12 06:24:56 ryoon Exp $
+# $NetBSD: Makefile,v 1.9 2017/06/18 21:13:47 youri Exp $
 
-PKGREVISION= 3
 .include "../../meta-pkgs/xfce4/Makefile.common"
 
-DISTNAME=	libxfce4ui-4.13.0
+DISTNAME=	libxfce4ui-4.13.1
 CATEGORIES=	x11
 MASTER_SITES+=	http://archive.xfce.org/src/xfce/libxfce4ui/4.13/
 
@@ -30,7 +29,6 @@ MAKE_DIRS+=	${XFCE4_EGBASE}/xfconf/xfce-perchannel-xml \
 .include "../../sysutils/desktop-file-utils/desktopdb.mk"
 .include "../../devel/xfce4-conf/buildlink3.mk"
 .include "../../graphics/hicolor-icon-theme/buildlink3.mk"
-.include "../../x11/gtk3/buildlink3.mk"
 .include "../../x11/libxfce4util/buildlink3.mk"
 .include "../../x11/libSM/buildlink3.mk"
 .include "../../x11/startup-notification/buildlink3.mk"
