--- a/x11/xfce4-session/Makefile
+++ b/x11/xfce4-session/Makefile
@@ -1,11 +1,10 @@
-# $NetBSD: Makefile,v 1.58 2017/02/12 06:26:17 ryoon Exp $
+# $NetBSD: Makefile,v 1.59 2017/06/18 22:37:33 youri Exp $
 
 .include "../../meta-pkgs/xfce4/Makefile.common"
 
-DISTNAME=		xfce4-session-4.12.1
-PKGREVISION=		4
+DISTNAME=		xfce4-session-4.13.0
 CATEGORIES=		x11
-MASTER_SITES+=		http://archive.xfce.org/src/xfce/xfce4-session/4.12/
+MASTER_SITES+=		http://archive.xfce.org/src/xfce/xfce4-session/4.13/
 
 HOMEPAGE=		http://docs.xfce.org/xfce/xfce4-session/start
 COMMENT=		Xfce session manager
@@ -46,7 +45,7 @@ CONF_FILES+=	${EGDIR}/xinitrc \
 .endif
 
 .include "../../devel/libglade/buildlink3.mk"
-.include "../../devel/libwnck/buildlink3.mk"
+.include "../../devel/libwnck3/buildlink3.mk"
 .include "../../sysutils/desktop-file-utils/desktopdb.mk"
 .include "../../x11/libxfce4ui/buildlink3.mk"
 .include "../../graphics/hicolor-icon-theme/buildlink3.mk"
