--- a/textproc/xfce4-dict/Makefile
+++ b/textproc/xfce4-dict/Makefile
@@ -1,11 +1,10 @@
-# $NetBSD: Makefile,v 1.4 2017/02/12 06:26:04 ryoon Exp $
+# $NetBSD: Makefile,v 1.5 2017/06/18 23:07:24 youri Exp $
 
-PKGREVISION= 3
 .include "../../meta-pkgs/xfce4/Makefile.common"
 
-DISTNAME=	xfce4-dict-0.7.1
+DISTNAME=	xfce4-dict-0.8.0
 CATEGORIES=	textproc
-MASTER_SITES=	http://archive.xfce.org/src/apps/xfce4-dict/0.7/
+MASTER_SITES=	http://archive.xfce.org/src/apps/xfce4-dict/0.8/
 
 HOMEPAGE=	http://goodies.xfce.org/projects/applications/xfce4-dict
 COMMENT=	Xfce dictionary application
