--- a/devel/apr-util/Makefile
+++ b/devel/apr-util/Makefile
@@ -1,7 +1,6 @@
-# $NetBSD: Makefile,v 1.47 2017/04/22 21:03:29 adam Exp $
+# $NetBSD: Makefile,v 1.48 2017/06/19 20:42:16 wiz Exp $
 
-DISTNAME=	apr-util-1.5.4
-PKGREVISION=	8
+DISTNAME=	apr-util-1.6.0
 CATEGORIES=	devel
 MASTER_SITES=	${MASTER_SITE_APACHE:=apr/}
 EXTRACT_SUFX=	.tar.bz2
