--- a/graphics/feh/Makefile
+++ b/graphics/feh/Makefile
@@ -1,7 +1,6 @@
-# $NetBSD: Makefile,v 1.81 2017/04/30 01:21:42 ryoon Exp $
+# $NetBSD: Makefile,v 1.82 2017/06/19 22:45:31 szptvlfn Exp $
 
-DISTNAME=	feh-2.18.3
-PKGREVISION=	1
+DISTNAME=	feh-2.19
 CATEGORIES=	graphics
 MASTER_SITES=	https://feh.finalrewind.org/
 EXTRACT_SUFX=	.tar.bz2
