--- a/sysutils/xfce4-thunar-vcs/Makefile
+++ b/sysutils/xfce4-thunar-vcs/Makefile
@@ -1,14 +1,14 @@
-# $NetBSD: Makefile,v 1.10 2017/04/22 21:03:58 adam Exp $
+# $NetBSD: Makefile,v 1.11 2017/06/20 12:20:39 youri Exp $
 
-PKGREVISION= 9
 .include "../../meta-pkgs/xfce4/Makefile.common"
 
-DISTNAME=	thunar-vcs-plugin-0.1.4
+VERSION=	0.1.5
+DISTNAME=	thunar-vcs-plugin-${VERSION}
 PKGNAME=	xfce4-${DISTNAME}
 CATEGORIES=	devel
-MASTER_SITES=	http://archive.xfce.org/src/thunar-plugins/thunar-vcs-plugin/0.1/
+MASTER_SITES=	http://archive.xfce.org/src/thunar-plugins/thunar-vcs-plugin/${VERSION:R}/
 
-MAINTAINER=	gls@NetBSD.org
+MAINTAINER=	youri@NetBSD.org
 HOMEPAGE=	http://goodies.xfce.org/projects/thunar-plugins/thunar-vcs-plugin
 COMMENT=	Thunar vcs integration plugin
 
@@ -16,4 +16,5 @@ COMMENT=	Thunar vcs integration plugin
 .include "../../devel/subversion-base/buildlink3.mk"
 .include "../../sysutils/xfce4-thunar/buildlink3.mk"
 .include "../../graphics/hicolor-icon-theme/buildlink3.mk"
+.include "../../x11/gtk2/buildlink3.mk"
 .include "../../mk/bsd.pkg.mk"
